[gd_scene load_steps=4 format=3 uid="uid://othphgyvrm2"]

[ext_resource type="Script" path="res://scenes/base/level_selector.gd" id="1_p7wev"]
[ext_resource type="FontFile" uid="uid://b7mjbsfetgi5m" path="res://assets/fonts/8bit16.ttf" id="2_s2nk8"]
[ext_resource type="PackedScene" uid="uid://baospphrome3n" path="res://scenes/player/player.tscn" id="3_8fsd3"]

[node name="LevelSelector" type="Node2D"]
script = ExtResource("1_p7wev")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.498039, 0.945098, 0.921569, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_s2nk8")
theme_override_font_sizes/font_size = 80
text = "Select A Level:"
horizontal_alignment = 1

[node name="Buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0

[node name="HBoxContainer" type="GridContainer" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_top = 250.0
offset_right = 288.0
offset_bottom = 303.0
scale = Vector2(4, 4)
columns = 5

[node name="Level1" type="Button" parent="CanvasLayer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_s2nk8")
text = "1"

[node name="Level2" type="Button" parent="CanvasLayer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_s2nk8")
text = "2"

[node name="Level3" type="Button" parent="CanvasLayer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_s2nk8")
text = "3"

[node name="Level4" type="Button" parent="CanvasLayer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_s2nk8")
text = "4"

[node name="Level5" type="Button" parent="CanvasLayer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_s2nk8")
text = "5
"

[node name="Player" parent="." instance=ExtResource("3_8fsd3")]
visible = false

[connection signal="pressed" from="CanvasLayer/Buttons/HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/HBoxContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/HBoxContainer/Level5" to="." method="_on_level_5_pressed"]
